--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
  <h1>Проекты</h1> 
  <hr>   
-         <h2>ЖК "Москва Сити"</h2>
+      <h2>ЖК "Москва M Сити"</h2>
          <div class="street">
 
              <p>ул. Токомбаева 21/6</p>
